--- a/src/app/landing.module.css
+++ b/src/app/landing.module.css
@@ -232,6 +232,7 @@
   transition: all 0.2s;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .whiteBtn {
@@ -246,6 +247,7 @@
   transition: all 0.2s;
   display: flex;
   align-items: center;
+  justify-content: center;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
 }
 
